--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"@vitest/browser": "^3.2.3",
 		"bits-ui": "^2.8.10",
 		"clsx": "^2.1.1",
+		"embla-carousel-svelte": "^8.6.0",
 		"eslint": "^9.18.0",
 		"eslint-config-prettier": "^10.0.1",
 		"eslint-plugin-svelte": "^3.0.0",
